Bug 344309 - Middle mouse click on plasma popups creates notes applet
Summary: Middle mouse click on plasma popups creates notes applet
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-18 10:18 UTC by Franz Trischberger
Modified: 2015-02-18 13:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Franz Trischberger 2015-02-18 10:18:43 UTC
I tested this with several applets, all show the same behaviour
* left-click on the clock to open calendar, then middleclick on a date
* middleclick on an item in the klipper popup
* middleclick in the powerdevil popup
* middleclick on an entry in mediacontrol popup

If the popup comes from an applet in a panel the note is created in that panel. If the applet is on the desktop, the note will appear there. The note often is empty, but sometimes it contains the single word "click".
Especially in the panel this is quite distracting, as removing the notes requires quite some steps (and micro-aiming with the mouse).

Is this a bug or a (weird) feature?

Reproducible: Always
Comment 1 Franz Trischberger 2015-02-18 10:49:56 UTC
Little addition:
Middleclick on systray icons (especially active ones, so not hidden) also adds notes applets. So this is not restricted only to middleclick on popups. However middleclick on e.g. the clock does not trigger this issue.
Comment 2 Kai Uwe Broulik 2015-02-18 13:37:42 UTC
Git commit e823ec848859658205b38280dbde78b2f3cb79b7 by Kai Uwe Broulik.
Committed on 18/02/2015 at 13:35.
Pushed by broulik into branch 'master'.

Ignore single actions on popups

Changelog: Sticky notes no longer appear when middle clicking a plasmoid popup

REVIEW: 122623

M  +11   -2    src/scriptengines/qml/plasmoid/appletinterface.cpp

http://commits.kde.org/plasma-framework/e823ec848859658205b38280dbde78b2f3cb79b7