Ignore single actions on popups

Changelog: Sticky notes no longer appear when middle clicking a plasmoid popup

REVIEW: 122623
BUG: 344309